# wildberries-parser

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  build-prod.sh  build.sh  compose.override.yml  create_db.py  create_superuser.py  docker-compose.yml  main.py  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
w_parser/: admin.py  asgi.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
w_parser/migrations/: 0001_initial.py
w_parser/static/css/: main.css
w_parser/static/css/dev/: main.css
w_parser/static/css/dev/blocks/: alert.css  button.css  filter.css  form.css  header.css  link.css  output.css  section.css  sorting.css  table.css
w_parser/static/css/dev/global/: common.css  container.css  fonts.css  reboot.css  reset.css  utils.css  variables.css
w_parser/static/js/: main.js
w_parser/templates/: 404.html  base.html  index.html  saved_searchs.html
