[project]
name = "wildberries-parser"
version = "0.1.0"
description = "test task"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "django>=5.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["w_parser"]