[project]
name = "wildberries-parser"
version = "0.1.0"
description = "test task"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "whitenoise>=6.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["w_parser"]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "dotenv>=0.9.9",
    "ruff>=0.12.1",
]
